# Websocket

./: CMakeLists.txt  readme.md
websocket/include/websocket/core/: byte_stream.h  flate.h  frame.h
websocket/source/mbedtls/: aes.c  aria.c  base64.c  bignum.c  error.c  ssl_misc.h  ssl_msg.c
websocket/source/websocket/: adler32.c  byte_stream.cpp  crc32.c  deflate.c  endian.cpp  example.cpp  flate.cpp  frame.cpp  gzclose.c  gzlib.c  gzread.c  gzwrite.c  handshake.cpp  http.cpp  inffast.c  inflate.c  inftrees.c  trees.c  websocket.cpp  websocket_c_api.cpp  zutil.c
